--- a/src/headers_footer/Filterheader.css
+++ b/src/headers_footer/Filterheader.css
@@ -1,5 +1,41 @@
 /* Done */
 
+
+.headerFlex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: 1em;
+  column-gap: 1.5em;
+  background-color: #100424;
+  border-bottom: 1px solid gainsboro;
+  margin-top: 2.1em;
+  padding: .5em;
+  padding-top: 31px;
+}
+
+
+.ImgHeader {
+  width: 163px;
+  height: auto;
+}
+
+
+@media screen and (max-width: 769px) {
+
+.headerFlex {
+line-height: 2.5em;
+}
+
+.ImgHeader {
+width: 50vw;
+max-width: 145px;
+}
+
+}
+
+
 .flex_Container_Filter {
 display: flex;
 justify-content: center;
@@ -15,6 +51,7 @@ margin: 0.7em 4.7em 0em 0em;
 .headerFilter .header_dvLogo {
 width: 141px;
 margin-top: .9em;
+margin-bottom: 2.1em;
 cursor: pointer;
 }
 
@@ -58,11 +95,14 @@ color: #f8a424;
 
 @media (max-width: 1036px) {
 
+.headerFlex {
+line-height: 2.5em;
+}
+
 .flex_Container_Filter {
 flex-direction: column;
 padding: 127px 47px 207px 47px;
 margin-left: 0;
-
 }
 
 .headerFilter .div_header_Filter {
@@ -116,6 +156,10 @@ gap: 2.7em;
 
 @media (min-width: 1037px) and (max-width: 1519px) {
 
+.headerFlx_left {
+margin-left: 27vw;
+}
+
 .flex_Container_Filter {
 margin-left: 297px;
 padding: 67px 37px 207px 57px;
@@ -125,13 +169,12 @@ padding: 67px 37px 207px 57px;
 .headerFilter .header_dvLogo {
 width: 133px;
 margin-top: 1.3em;
-margin-right: -2.3em;
+margin-right: -1.5em;
 margin-left: -1.7em;
 }
 
 .headerFilter ul li {
 font-size: 0.8rem;
-width: 117px;
 }
 
 .headerFilter ul h3 {
