--- a/src/headers_footer/navbar.css
+++ b/src/headers_footer/navbar.css
@@ -82,6 +82,7 @@ width: 30px;
 cursor: pointer;
 border-radius: 3px;
 padding: 3px;
+filter: invert(1);
 }
 
 
@@ -582,6 +583,7 @@ margin-top: 1.3em;
 .Product_navbar .logo_img {
 width: 104px;
 height: auto;
+padding: 5px;
 }
 
 /* NavBar SLider */
