--- a/src/components/ProductDetails.css
+++ b/src/components/ProductDetails.css
@@ -206,7 +206,7 @@ margin-bottom: 1.1em;
 display: inline-flex;
 justify-content: center;
 align-items: center;
-width: 77px;
+width: 87px;
 height: 37px;
 border-radius: 50%;
 text-align: center;
@@ -217,8 +217,9 @@ cursor: pointer;
 margin: 5px;
 border-radius: 23px;
 transition: background-color 0.3s ease, color 0.3s ease;
-border: 1px solid #f85c74;
+border: 1px solid #d6b684;
 }
+
 
 
 #btnsize.selected {
