--- a/src/components/ProductListmodule.css
+++ b/src/components/ProductListmodule.css
@@ -32,7 +32,8 @@ height: auto;
 margin-bottom: 2.1em;
 border-radius: 7px;
 border: 1px solid rgba(27, 6, 6, 0.055);
-box-shadow: 7px 12px 12px 5px rgba(19, 19, 19, 0.073);
+box-shadow: 0 6px 15px rgba(0, 0, 0, 0.12),
+0 10px 25px rgba(0, 0, 0, 0.08);
 max-width: 231px;
 }
 
@@ -130,19 +131,14 @@ right: 0px;
 z-index: 999;
 padding: 11px;
 font-size: 1.2rem;
-margin-right: .3em;
-margin-top: .2em;
+margin-right: .5em;
+margin-top: .5em;
 background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);
+color: #DCDCDC;
+transition: background-color 0.3s ease;
 cursor: pointer;
 }
 
-
-.fa-heart_products {
-color: #DCDCDC;
-background-color: #FFFFFF;
-transition: background-color 0.3s ease;
-}
 
 
 .fa-heart_products.wishlist-active {
@@ -181,13 +177,12 @@ grid-template-columns: repeat(2, 1fr);
 
 
 .flex_productlist .produclist_divContainer {
-box-shadow: none;
 max-width: 100%;
 }
 
 
 .flex_productlist .produclist_divContainer img {
-width: 90%;
+width: 100%;
 }
 
 
@@ -206,8 +201,10 @@ gap: 0.3em;
 heart Size .. */
 
 .fa-heart_products {
-padding: 11px;
-font-size: 1rem;
+padding: 0px;
+font-size: 1.2rem;
+margin-right: .8em;
+margin-top: .7em;
 }
 
 }
@@ -230,7 +227,6 @@ grid-template-columns: repeat(2, 1fr);
 
 
 .flex_productlist .produclist_divContainer {
-box-shadow: none;
 max-width: 100%;
 }
 
@@ -260,9 +256,8 @@ transform: translateX(30.3vw);
 position: relative;
 height: auto;
 margin-bottom: 2.1em;
-border-radius: 33px;
 border: 1px solid rgba(27, 6, 6, 0.055);
-box-shadow: 7px 12px 12px 5px rgba(19, 19, 19, 0.073);
+box-shadow: 0 0 4px rgba(0,0,0,0.2);
 }
  
 
