Added all project files

--- a/src/headers_footer/navbar.css
+++ b/src/headers_footer/navbar.css
@@ -24,9 +24,10 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 width: 100%;
-height: auto;
 padding: 3px 57px 3px 57px;
-z-index: 99999;
+z-index: 9999;
+position: relative;
+height: 77px;
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.052);
 background-color: #100424;
 transition: 0.3s;
