--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -5,13 +5,14 @@ position: fixed;
 width: 317px;
 height: 91vh;
 padding-bottom: 87px;
-top: 5.3em;
+top: 77px;
 padding: 37px;
 overflow-y: auto;
 text-align: start;
 transition: 0.5s;
 background-color: rgb(255, 255, 255);
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.232);
+z-index: 9999;
 }
 
 
